--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
   <!-- İletişim -->
   <div id="iletisim" class="container-fluid bg-dark text-center">
     <h2>Bize Ulaşın</h2>
-    <p><i class="fa fa-envelope"></i> info@edukup.com</p>
+    <p><i class="fa fa-envelope"></i> edukupum@gmail.com</p>
     <p><i class="fa fa-phone"></i> +90 533 561 01 82</p>
-    <a href="https://wa.me/905551234567" target="_blank" class="btn btn-success"><i class="fa fa-whatsapp"></i> WhatsApp'tan Yaz</a>
+    <a href="https://wa.me/905335610182" target="_blank" class="btn btn-success"><i class="fa fa-whatsapp"></i> WhatsApp'tan Yaz</a>
     <div class="embed-responsive embed-responsive-16by9" style="margin-top:30px;">
       <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18..." allowfullscreen></iframe>
     </div>
@@ -151,7 +151,7 @@
   <!-- Footer -->
   <footer class="container-fluid bg-primary text-center">
     <p>&copy; 2025 EduKüp Teknoloji</p>
-    <a href="https://instagram.com/edukup" class="social-icon"><i class="fa fa-instagram"></i></a>
+    <a href="https://instagram.com/edu_kup" class="social-icon"><i class="fa fa-instagram"></i></a>
     <a href="https://linkedin.com/company/edukup" class="social-icon"><i class="fa fa-linkedin"></i></a>
     <a href="https://youtube.com/@edukup" class="social-icon"><i class="fa fa-youtube"></i></a>
   </footer>
