--- a/index.html
+++ b/index.html
@@ -60,26 +60,30 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">EduKüp</a>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
-          <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#hero">Anasayfa</a></li>
-          <li><a href="#urun">Ürün</a></li>
-          <li><a href="#egitim">Eğitim</a></li>
-          <li><a href="#yorumlar">Yorumlar</a></li>
-          <li><a href="#iletisim">İletişim</a></li>
-        </ul>
-      </div>
+ <!-- Navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img src="img/image1.png" alt="EduKüp Logo" style="height:40px; display:inline-block; margin-top:-10px;">
+        EduKüp
+      </a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
+        <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+      </button>
     </div>
-  </nav>
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#hero">Anasayfa</a></li>
+        <li><a href="#urun">Ürün</a></li>
+        <li><a href="#egitim">Eğitim</a></li>
+        <li><a href="#yorumlar">Yorumlar</a></li>
+        <li><a href="#iletisim">İletişim</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
   <!-- Hero Section -->
   <div id="hero" class="container-fluid bg-primary text-center" style="padding-top:100px;">
