--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <img src="img/image1.png" alt="EduKüp Logo" style="height:40px; display:inline-block; margin-top:-10px;">
+        <img src="image 1.png" alt="EduKüp Logo" style="height:40px; display:inline-block; margin-top:-10px;">
         EduKüp
       </a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
