--- a/index.html
+++ b/index.html
@@ -164,8 +164,13 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <div class="embed-responsive embed-responsive-4by3" style="max-width: 400px; margin: 30px auto;">
+  <iframe class="embed-responsive-item"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3009.9631072609883!2d29.308280775923096!3d40.88475722968065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac5b6f250d0cd%3A0x6e06621e40804c16!2sTeknopark%20%C4%B0stanbul!5e0!3m2!1str!2str!4v1718812193292!5m2!1str!2str"
+    width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
+
 
 </body>
 </html>
