--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <a href="#urun" class="btn btn-warning btn-lg">Ürünü Keşfet</a>
     <a href="#egitim" class="btn btn-default btn-lg">Eğitim İçeriği</a>
     <div class="embed-responsive embed-responsive-16by9" style="margin-top:30px;">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=LXHLibj62ws" allowfullscreen></iframe>
     </div>
   </div>
 
