--- a/index.html
+++ b/index.html
@@ -85,16 +85,17 @@
 </nav>
 
 
-  <!-- Hero Section -->
-  <div id="hero" class="container-fluid bg-primary text-center" style="padding-top:100px;">
-    <h1 class="display-3">EduKüp</h1>
-    <p class="lead">Yerli Üretim. Yapay Zekâ Destekli. Modüler STEM Eğitim Kiti.</p>
-    <a href="#urun" class="btn btn-warning btn-lg">Ürünü Keşfet</a>
-    <a href="#egitim" class="btn btn-default btn-lg">Eğitim İçeriği</a>
-    <div class="embed-responsive embed-responsive-16by9" style="margin-top:30px;">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=LXHLibj62ws" allowfullscreen></iframe>
-    </div>
+<!-- Hero Section -->
+<div id="hero" class="container-fluid bg-primary text-center" style="padding-top:100px;">
+  <h1 class="display-3">EduKüp</h1>
+  <p class="lead">Yerli Üretim. Yapay Zekâ Destekli. Modüler STEM Eğitim Kiti.</p>
+  <a href="#urun" class="btn btn-warning btn-lg">Ürünü Keşfet</a>
+  <a href="#egitim" class="btn btn-default btn-lg">Eğitim İçeriği</a>
+  <div class="embed-responsive embed-responsive-16by9" style="margin-top:30px;">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LXHLibj62ws" allowfullscreen></iframe>
   </div>
+</div>
+
 
   <!-- Ürün Bilgisi -->
   <div id="urun" class="container-fluid bg-light text-center">
