--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EduKüp - STEM Eğitim Kiti</title>
   <meta name="description" content="EduKüp - Yerli üretim, yapay zekâ destekli STEM eğitim kiti.">
+  <meta name="description" content="EduKüp - Yerli üretim, yapay zekâ destekli STEM eğitim kiti.">
+<link rel="icon" type="image/png" href="image 1.png">
   <meta name="keywords" content="EduKüp, STEM, Robotik, Kodlama, Eğitim Seti, Spike Prime, Arduino, Yapay Zeka">
   <meta name="author" content="EduKüp Teknoloji">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
