--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EduKüp - STEM Eğitim Kiti</title>
   <meta name="description" content="EduKüp - Yerli üretim, yapay zekâ destekli STEM eğitim kiti.">
-  <link rel="icon" type="image/png" href="image 1.png">
+  <meta name="description" content="EduKüp - Yerli üretim, yapay zekâ destekli STEM eğitim kiti.">
+<link rel="icon" type="image/png" href="image 1.png">
   <meta name="keywords" content="EduKüp, STEM, Robotik, Kodlama, Eğitim Seti, Spike Prime, Arduino, Yapay Zeka">
   <meta name="author" content="EduKüp Teknoloji">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -57,50 +58,46 @@
       margin: 30px auto;
       max-width: 600px;
     }
-    .video-container, .map-container {
-      max-width: 560px;
-      margin: 0 auto;
-    }
-    .map-container {
-      max-width: 400px;
-    }
   </style>
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          <img src="image 1.png" alt="EduKüp Logo" style="height:40px; display:inline-block; margin-top:-10px;">
-        </a>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
-          <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#hero">Anasayfa</a></li>
-          <li><a href="#urun">Ürün</a></li>
-          <li><a href="#egitim">Eğitim</a></li>
-          <li><a href="#yorumlar">Yorumlar</a></li>
-          <li><a href="#iletisim">İletişim</a></li>
-        </ul>
-      </div>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img src="image 1.png" alt="EduKüp Logo" style="height:40px; display:inline-block; margin-top:-10px;">
+  
+      </a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNav">
+        <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+      </button>
     </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <div id="hero" class="container-fluid bg-primary text-center" style="padding-top:100px;">
-    <h1 class="display-3">EduKüp</h1>
-    <p class="lead">Yerli Üretim. Yapay Zekâ Destekli. Modüler STEM Eğitim Kiti.</p>
-    <a href="#urun" class="btn btn-warning btn-lg">Ürünü Keşfet</a>
-    <a href="#egitim" class="btn btn-default btn-lg">Eğitim İçeriği</a>
-    <div class="embed-responsive embed-responsive-16by9 video-container" style="margin-top:30px;">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rFC9jXPXM0E" allowfullscreen></iframe>
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#hero">Anasayfa</a></li>
+        <li><a href="#urun">Ürün</a></li>
+        <li><a href="#egitim">Eğitim</a></li>
+        <li><a href="#yorumlar">Yorumlar</a></li>
+        <li><a href="#iletisim">İletişim</a></li>
+      </ul>
     </div>
   </div>
+</nav>
+
+
+<!-- Hero Section -->
+<div id="hero" class="container-fluid bg-primary text-center" style="padding-top:100px;">
+  <h1 class="display-3">EduKüp</h1>
+  <p class="lead">Yerli Üretim. Yapay Zekâ Destekli. Modüler STEM Eğitim Kiti.</p>
+  <a href="#urun" class="btn btn-warning btn-lg">Ürünü Keşfet</a>
+  <a href="#egitim" class="btn btn-default btn-lg">Eğitim İçeriği</a>
+  <div class="embed-responsive embed-responsive-16by9" style="margin-top:30px;">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rFC9jXPXM0E" allowfullscreen></iframe>
+  </div>
+</div>
+
 
   <!-- Ürün Bilgisi -->
   <div id="urun" class="container-fluid bg-light text-center">
@@ -153,11 +150,10 @@
     <p><i class="fa fa-envelope"></i> edukupum@gmail.com</p>
     <p><i class="fa fa-phone"></i> +90 533 561 01 82</p>
     <a href="https://wa.me/905335610182" target="_blank" class="btn btn-success"><i class="fa fa-whatsapp"></i> WhatsApp'tan Yaz</a>
-    <div class="embed-responsive embed-responsive-4by3 map-container" style="margin-top:30px;">
-      <iframe class="embed-responsive-item"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3009.9631072609883!2d29.308280775923096!3d40.88475722968065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac5b6f250d0cd%3A0x6e06621e40804c16!2sTeknopark%20%C4%B0stanbul!5e0!3m2!1str!2str!4v1718812193292!5m2!1str!2str"
-        width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
+    <div class="embed-responsive embed-responsive-16by9" style="margin-top:30px;">
+      <iframe class="embed-responsive-item" 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1508.4837037568476!2d29.233241483975453!3d40.875970599653206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cacef774f9b173%3A0x5a8223b36d262105!2sPendik%20Anadolu%20Lisesi!5e0!3m2!1str!2str!4v1718807730000!5m2!1str!2str" 
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
   </div>
