--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
     <a href="https://wa.me/905335610182" target="_blank" class="btn btn-success"><i class="fa fa-whatsapp"></i> WhatsApp'tan Yaz</a>
     <div class="embed-responsive embed-responsive-16by9" style="margin-top:30px;">
       <iframe class="embed-responsive-item" 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1508.4837037568476!2d29.233241483975453!3d40.875970599653206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cacef774f9b173%3A0x5a8223b36d262105!2sPendik%20Anadolu%20Lisesi!5e0!3m2!1str!2str!4v1718807730000!5m2!1str!2str" 
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+  src="https://www.google.com/maps/embed?..." 
+  width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
     </div>
   </div>
 
